用户操作逻辑完成

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -67,3 +67,10 @@ a {
   float: right;
 }
 
+/*公共组件样式*/
+.el-breadcrumb {
+  margin-bottom: 20px;
+}
+.el-card {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
+}
